test/functional/Sema/improved_error_messages.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

struct Point {
    x: Int,
    y: Int
}

func main() -> Int {
    // This will create type constraint conflicts that can't be resolved
    let p: Point = 42;
    // CHECK: error: Cannot convert type of variable 'p' to Point in initialization of variable 'p'
    // CHECK: error: Cannot use integer literal '42' as literal expression
    return 0;
}